<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/blue_gradient"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/blue_gradient_background"
        android:scaleX="1.5"
        android:scaleY="3.5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/blue_gradient_background" />

    <TextView
        android:id="@+id/start_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/train_track"
        android:textAlignment="center"
        android:textColor="#10164C"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <Button
        android:id="@+id/login_nav_button"
        android:layout_width="182dp"
        android:layout_height="82dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#0264c7"
        android:onClick="login"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="30sp"

        app:layout_constraintBottom_toTopOf="@+id/signup_nav_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_title" />

    <Button
        android:id="@+id/signup_nav_button"
        android:layout_width="187dp"
        android:layout_height="79dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="#0264c7"
        android:onClick="signup"
        android:text="@string/sign_up"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_nav_button" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/blue_gradient"
        app:srcCompat="@mipmap/logo"
        android:contentDescription="TODO" />

</androidx.constraintlayout.widget.ConstraintLayout>