<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="70sp"
        android:gravity="center"
        android:paddingBottom="30dp"/>

    <Spinner
        android:id="@+id/signup_type"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginVertical="20dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:dropDownWidth="match_parent"
        android:padding="20dp"
        android:spinnerMode="dropdown" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/signup_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="20dp"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/signup_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@id/signup_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signup_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0264c7"
        android:onClick="confirm"
        android:padding="20dp"
        android:text="@string/sign_up"
        app:iconPadding="20dp" />

</LinearLayout>